added highlights section

--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -6,6 +6,7 @@
   padding: 1rem 2rem;
   border-radius: btn.$border-radius;
   border: none;
+  font-family: btn.$body-font;
   font-size: 16pt;
   cursor: pointer;
   transition: btn.$transition;
