--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -1,6 +1,13 @@
 @use '../../app.module.scss' as header;
 
 header {
+  width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 3;
+
   .container {
     display: flex;
     flex-direction: row;
