--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -17,7 +17,7 @@ $secondary-light-orange: #fbdabb;
 $secondary-anti-flash-white: #edefee;
 $secondary-jet: #333333;
 
-$primary-accent: #cddbd6;
+$primary-accent: #e7eeec;
 $secondary-accent: #fef4ec;
 
 /* ========== DEVICE BREAKPOINTS ========== */
@@ -44,17 +44,17 @@ $font-black: 900;
 $big-font-size: 5.33rem;
 $h1-font-size: 5.33rem;
 $h2-font-size: 3.33rem;
-$h3-font-size: 2rem;
-$normal-font-size: 1.33rem;
+$h3-font-size: 1.5rem;
+$normal-font-size: 1.25rem;
 $small-font-size: 0.88rem;
 $smaller-font-size: 0.813rem;
 $tiny-font-size: 0.625rem;
 
 /* === Responsive typography === */
 
-$big-font-size-lg: 2.75rem;
-$h1-font-size-lg: 1.5rem;
-$h2-font-size-lg: 1.25rem;
+$big-font-size-lg: 3rem;
+$h1-font-size-lg: 3.5rem;
+$h2-font-size-lg: 2.25rem;
 $h3-font-size-lg: 1rem;
 $normal-font-size-lg: 0.88rem;
 $small-font-size-lg: 0.813rem;
