--- a/src/layouts/nav/nav.module.scss
+++ b/src/layouts/nav/nav.module.scss
@@ -27,6 +27,7 @@ nav {
     }
 
     .hamburger {
+      display: flex;
       cursor: pointer;
     }
   }
@@ -53,10 +54,11 @@ nav {
       justify-content: center;
       align-items: center;
       width: 100%;
-      top: 58px;
+      top: 50px;
       right: 0;
       background-color: white;
       padding: 1rem;
+      border-bottom: 8px solid nav.$primary-gold;
     }
 
     li {
