--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -64,6 +64,36 @@ $smaller-font-size-lg: 0.75rem;
   $big-font-size: 2.25rem;
 }
 
+/* ========== MIXINS ========== */
+
+@mixin overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba($primary-feldgrau, 0.7);
+}
+
+@mixin btn {
+  background-color: $primary-gold;
+  color: $secondary-jet;
+  padding: 1rem 2rem;
+  border-radius: $border-radius;
+  border: none;
+  font-family: $body-font;
+  font-size: 16pt;
+  cursor: pointer;
+  transition: $transition;
+  width: -moz-fit-content;
+  width: fit-content;
+
+  &:hover {
+    background-color: $secondary-jet;
+    color: $primary-gold;
+  }
+}
+
 /* ========== GLOBALS ========== */
 
 * {
@@ -87,6 +117,7 @@ input {
 h1,
 h2 {
   font-family: $heading-font;
+  font-weight: $font-medium;
 }
 
 /* pseudo-elements */
